--- a/app/src/main/res/layout/camera_translation.xml
+++ b/app/src/main/res/layout/camera_translation.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="">
+    android:layout_height="match_parent">
 
-
-    <!-- 第一个布局文件的内容 -->
+    <!-- 顶部导航栏 -->
     <LinearLayout
+        android:id="@+id/top_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#ededed"
         android:padding="16dp">
 
-        <!-- 导航栏的标题 -->
-
-        <!-- 分割线 -->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,242 +32,242 @@
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical|center_horizontal"
-        android:orientation="vertical">
+    <!-- 主要内容区域 -->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_content"
+        android:layout_width="369dp"
+        android:layout_height="544dp"
+        android:layout_below="@id/top_navigation"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="18dp"
+        android:padding="16dp">
+
+        <!-- 使用CardView包裹整个按钮区域以增加阴影和质感 -->
+
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="320dp"
+            android:layout_height="148dp"
+            android:layout_constraintTop_toBottomOf="+id/top_navigation"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:padding="16dp"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="16dp"
+            tools:ignore="MissingConstraints">
 
             <!-- 左边的按钮和解释 -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <!-- 拍照按钮 -->
                 <ImageButton
                     android:id="@+id/btn_capture"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_camera" /> <!-- 这里替换成您的拍照图标 -->
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/button_background"
+                    android:contentDescription="@string/btn_capture"
+                    android:src="@drawable/ic_camera_white" />
 
-                <!-- 拍照按钮解释 -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="          拍照           "
-                    android:typeface="sans"
-                    android:layout_marginTop="9dp" /> <!-- 根据需要设置间距 -->
+                    android:layout_marginTop="8dp"
+                    android:text="拍照"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
             <!-- 右边的按钮和解释 -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:typeface="sans"
-                android:gravity="center">
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <!-- 图库按钮 -->
                 <ImageButton
                     android:id="@+id/btn_gallery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_gallery" /> <!-- 这里替换成您的图库图标 -->
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/button_background"
+                    android:contentDescription="@string/btn_gallery"
+                    android:src="@drawable/ic_photo" />
 
-                <!-- 图库按钮解释 -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="            图库            "
-                    android:layout_marginTop="9dp" /> <!-- 根据需要设置间距 -->
+                    android:layout_marginTop="8dp"
+                    android:text="图库"
+                    android:textSize="20sp" />
 
             </LinearLayout>
-            <!-- 提交翻译按钮 -->
-
-            <!-- 显示原始图像 -->
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/img_selected_photo"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="160dp"
+            android:background="@drawable/custom_edittext_border"
+            android:scaleType="centerCrop"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardView"></ImageView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- 显示提交按钮 -->
 
         <Button
             android:id="@+id/btn_submit_translation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rotationY="0"
-            android:text="提交" />
-
-        <ImageView
-            android:id="@+id/img_original"
-            android:layout_width="51dp"
-            android:layout_height="79dp"
-            android:background="@drawable/bg_text_area"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:id="@+id/txt_recognized_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="                                  识别文本      "
-            android:background="@drawable/bg_text_area"
-            android:padding="8dp"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/txt_translated_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_text_area"
-            android:text="                                  翻译结果      "
-            android:padding="8dp"
-            android:textSize="20sp" />
+            android:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/button_background"
+            android:text="提交"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="445dp" />
 
 
-    </LinearLayout>
-
-
-    <!-- 底部导航栏 -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="-8dp"
         android:background="#ededed"
         android:orientation="horizontal"
         android:paddingVertical="8dp">
 
-        <!-- 其他底部按钮可以在这里添加，与主页布局类似 -->
+        <!-- 首页按钮 -->
         <LinearLayout
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
+            android:id="@+id/home_button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="#ededed"
-            android:orientation="horizontal"
-            android:paddingVertical="8dp">
-
-            <!-- 首页按钮 -->
-            <LinearLayout
-                android:id="@+id/home_button"
-                android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_home_black_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="首页"
-                    android:textColor="#000000"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <!-- 语音按钮 -->
-            <LinearLayout
-                android:id="@+id/voice_button"
-                android:layout_width="0dp"
+                android:src="@drawable/ic_home_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:text="首页"
+                android:textColor="#000000"
+                android:textSize="12sp" />
+        </LinearLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_mic_black_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="语音"
-                    android:textColor="#000000"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <!-- 拍照按钮 -->
-            <LinearLayout
-                android:id="@+id/camera_button"
-                android:layout_width="0dp"
+        <!-- 语音按钮 -->
+        <LinearLayout
+            android:id="@+id/voice_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_camera_alt_blue_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="拍照"
-                    android:textColor="#0044cc"
-                    android:textStyle="bold"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <!-- 历史按钮 -->
-            <LinearLayout
-                android:id="@+id/history_button"
-                android:layout_width="0dp"
+                android:src="@drawable/ic_mic_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:text="语音"
+                android:textColor="#000000"
+                android:textSize="12sp" />
+        </LinearLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_history_black_24dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="历史"
-                    android:textColor="#000000"
-                    android:textSize="12sp" />
-            </LinearLayout>
-
-            <!-- 我的按钮 -->
-            <LinearLayout
-                android:id="@+id/my_button"
-                android:layout_width="0dp"
+        <!-- 拍照按钮 -->
+        <LinearLayout
+            android:id="@+id/camera_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:src="@drawable/ic_camera_alt_blue_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="拍照"
+                android:textColor="#0044cc"
+                android:textStyle="bold"
+                android:textSize="12sp" />
+        </LinearLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_person_black_24dp" />
+        <!-- 历史按钮 -->
+        <LinearLayout
+            android:id="@+id/history_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_history_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="历史"
+                android:textColor="#000000"
+                android:textSize="12sp" />
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="我的"
-                    android:textColor="#000000"
-                    android:textSize="12sp" />
-            </LinearLayout>
+        <!-- 我的按钮 -->
+        <LinearLayout
+            android:id="@+id/my_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_person_black_24dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我的"
+                android:textColor="#000000"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
-
 
 </RelativeLayout>
