--- a/app/src/main/res/layout/my_management_noaccount.xml
+++ b/app/src/main/res/layout/my_management_noaccount.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:text="    Profile"
+            android:text="    Visitor Mode"
             android:textColor="#000000"
             android:textSize="28sp"
             android:lineSpacingMultiplier="1.2"
@@ -49,47 +49,33 @@
             android:layout_margin="8dp"
             app:cardCornerRadius="4dp"
             app:cardElevation="2dp"
-            app:cardBackgroundColor="@color/white">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="190dp"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/profile_image"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:src="@drawable/ic_person_black_24dp"
-                    android:background="@drawable/circle_border"
-                    android:padding="4dp" />
-
-                <TextView
-                    android:id="@+id/user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:text="John Doe"
-                    android:textColor="#000000"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/email_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="6dp"
-                    android:text="john.doe@example.com"
-                    android:textColor="#778899"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            app:cardBackgroundColor="@color/white"></androidx.cardview.widget.CardView>
     </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:gravity="center">
+
+            <!-- 未登录时显示通用图像或提示 -->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_visitor"
+            android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="           访客状态\n您还未进行登录操作！"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
     <!-- 中间区域按钮 -->
     <LinearLayout
@@ -100,134 +86,43 @@
         android:layout_constraintTop_toTopOf="parent"
         android:layout_constraintBottom_toBottomOf="parent">
 
-        <!-- 编辑资料按钮 -->
+
+
+
         <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
+            android:layout_marginTop="50dp"
+            android:cardCornerRadius="8dp"
+            android:cardElevation="4dp"
+            android:cardMaxElevation="4dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardUseCompatPadding="true">
 
             <Button
-                android:id="@+id/edit_button"
+                android:id="@+id/log_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="编辑资料"
-                android:drawableLeft="@drawable/ic_edit"
-                android:drawableRight="@drawable/ic_to"
-
-                android:drawablePadding="16dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 离线翻译按钮 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
-
-            <Button
-                android:id="@+id/offline_translation_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="离线翻译"
-                android:drawableLeft="@drawable/ic_download"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 隐私设置按钮 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
-
-            <Button
-                android:id="@+id/privacy_settings_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="隐私设置"
-                android:drawableLeft="@drawable/ic_personalset"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 选择语言按钮 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
-
-            <Button
-                android:id="@+id/select_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="选择语言"
-                android:drawableLeft="@drawable/ic_select"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 投诉建议按钮 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
-
-            <Button
-                android:id="@+id/feedback_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="投诉建议"
-                android:drawableLeft="@drawable/ic_feedback"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 退出账号按钮 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:cardCornerRadius="4dp"
-            android:cardElevation="2dp"
-            android:cardUseCompatPadding="true">
-
-            <Button
-                android:id="@+id/logout_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="退出账号"
-                android:drawableLeft="@drawable/ic_exit"
-                android:drawableRight="@drawable/ic_to"
-                android:drawablePadding="16dp" />
+                android:text="点击登录"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:drawablePadding="25dp"
+                android:background="@drawable/button_background"
+                android:stateListAnimator="@animator/button_elevation"
+            style="?attr/borderlessButtonStyle" />
 
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
-
     <View
         android:id="@+id/bottom_spacer"
         android:layout_width="0dp"
-        android:layout_height="23dp"
+        android:layout_height="270dp"
         android:layout_constraintTop_toBottomOf="@+id/bottom_navigation"
         android:layout_constraintLeft_toLeftOf="parent"
         android:layout_constraintRight_toRightOf="parent"
